# libreplit

./: .gitignore  LICENSE  README.md  meson.build  meson_options.txt
docs/reference/: meson.build
docs/reference/libreplit/: libreplit.toml.in  meson.build
libreplit/: meson.build  replit-client.c  replit-client.h  replit-subscriber.c  replit-subscriber.h  replit-version.h.in  replit.c  replit.h
libreplit-cli/: main.c  meson.build
man/: meson.build  rquery.txt  stylesheet.xsl
