option(
	'rquery',
	type: 'boolean',
	value: true,
	description: 'Build rquery command-line tool',
)

option(
	'man',
	type: 'boolean',
	value: false,
	description: 'Build rquery manual pages',
)

option(
	'docs',
	type: 'boolean',
	value: false,
	description: 'Build API reference and tools documentation',
)

option(
	'introspection',
	type: 'feature',
	value: 'auto',
	yield: true,
	description: 'Build introspection data (requires gobject-introspection)',
)
